--- a/graphfront/package.json
+++ b/graphfront/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "redux1",
+  "name": "graphfront",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.15.1",
+    "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "apollo-boost": "^0.4.9",
+    "apollo-graphql": "^0.9.5",
+    "graphql-tag": "^2.12.6",
     "react": "^17.0.2",
+    "react-apollo": "^3.1.5",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
-    "redux": "^4.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
